[gd_scene load_steps=10 format=3 uid="uid://cqv3jx28qa4o8"]

[ext_resource type="Texture2D" uid="uid://dywkacdyg0eas" path="res://assets/sprites/slime_green.png" id="1_5jc4t"]
[ext_resource type="Script" uid="uid://b68agr5g84fea" path="res://scripts/slime.gd" id="1_n6pvg"]
[ext_resource type="PackedScene" uid="uid://bx5g52mgmhada" path="res://scenes/killzone.tscn" id="2_4l1t8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ppcr1"]
atlas = ExtResource("1_5jc4t")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jayke"]
atlas = ExtResource("1_5jc4t")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2002g"]
atlas = ExtResource("1_5jc4t")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bratd"]
atlas = ExtResource("1_5jc4t")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_5b0gg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppcr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jayke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2002g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bratd")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_da4t2"]
size = Vector2(8, 12)

[node name="Slime" type="Node2D"]
script = ExtResource("1_n6pvg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5b0gg")
autoplay = "default"
frame = 3
frame_progress = 0.580095

[node name="Hitbox" parent="." groups=["enemies"] instance=ExtResource("2_4l1t8")]
collision_layer = 17
collision_mask = 3
script = null

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_da4t2")

[node name="RayCastJobbra" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(10, 0)

[node name="RayCastBalra" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(-10, 0)

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
